trunk/Archive2/be/ceee6aa9da5299/output
main.cpp: In function 'int main()':
main.cpp:18:61: error: expected ';' at end of input
                   << std::setprecision(2) << std::setw(WIDTH) 
                                                             ^
main.cpp:18:61: error: expected '}' at end of input
main.cpp:18:61: error: expected '}' at end of input
